tooling/nargo_cli/tests/compile_failure/dup_trait_items_4/src/main.nr
trait MyTrait {
  let MyItem: u32;
  fn MyItem();
}

fn main() {
}
